tests/compile-fail/function_calls/exported_symbol_wrong_arguments.stderr
error: Undefined Behavior: calling a function with more arguments than it expected
  --> $DIR/exported_symbol_wrong_arguments.rs:8:14
   |
LL |     unsafe { foo(1) } //~ ERROR calling a function with more arguments than it expected
   |              ^^^^^^ calling a function with more arguments than it expected
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/exported_symbol_wrong_arguments.rs:8:14

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

